@@ -9,5 +9,4 @@
 #define PQXX_HAVE_SLEEP 1
 #define PQXX_HAVE_STRERROR_R 1
 #define PQXX_HAVE_STRERROR_R_GNU 1
-#define PQXX_HAVE_STRNLEN 1
 #define PQXX_HAVE_SYS_SELECT_H 1
